--- a/docs/index.css
+++ b/docs/index.css
@@ -335,7 +335,7 @@ main .mid-main .mid-main-right .textbox-products {
     align-items: center;
 }
 
-main .mid-main .mid-main-right .textbox-products p {
+main .mid-main .mid-main-right .textbox-products {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     font-size: 20px;
